# sim_pk-rs

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yaml
src/: ConstVal.ts  common_function.ts  exp_Vd.ts  exp_administration.ts  exp_compmodel.ts  exp_dysfunctionA.ts  exp_dysfunctionB.ts  exp_infusion.ts  exp_loading.ts  exp_parameters.ts  exp_plan.ts  exp_repeat.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  ode.rs
